[gd_scene load_steps=18 format=3 uid="uid://bkroha6k87kwx"]

[ext_resource type="Script" path="res://scripts/characters/player.gd" id="1_5pw7r"]
[ext_resource type="Texture2D" uid="uid://b2pb02eg4a0n6" path="res://sprites/player/frog_pixel_charge.png" id="2_2x2q1"]
[ext_resource type="Texture2D" uid="uid://ig0q3i7yiixh" path="res://sprites/player/frog_pixel_run.png" id="2_8au5o"]
[ext_resource type="Texture2D" uid="uid://b5se24iv18b3u" path="res://sprites/player/frog_pixel_idle.png" id="2_8p0ns"]
[ext_resource type="Texture2D" uid="uid://b20stv1thxi11" path="res://sprites/CircularProgressBar.png" id="3_8ffhc"]
[ext_resource type="Texture2D" uid="uid://d1vvvnivf51eb" path="res://sprites/player/frog_pixel_jump.png" id="6_keuuw"]
[ext_resource type="Texture2D" uid="uid://cnycbvcnsipbw" path="res://sprites/player/frog_pixel_fall.png" id="7_j2qo0"]

[sub_resource type="Curve" id="Curve_3phni"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.175292), -1.40888, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l4nkx"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lhdui"]
particle_flag_disable_z = true
spread = 63.403
initial_velocity_max = 133.6
gravity = Vector3(0, 0, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = 18.62

[sub_resource type="Animation" id="Animation_lv5cv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_2x2q1")]
}

[sub_resource type="Animation" id="Animation_qjj67"]
resource_name = "charge"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_2x2q1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2rjuc"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_j2qo0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_c410l"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8p0ns")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_m7lx0"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_keuuw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_oujiy"]
resource_name = "run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_8au5o")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d0psv"]
_data = {
"RESET": SubResource("Animation_lv5cv"),
"charge": SubResource("Animation_qjj67"),
"fall": SubResource("Animation_2rjuc"),
"idle": SubResource("Animation_c410l"),
"jump": SubResource("Animation_m7lx0"),
"run": SubResource("Animation_oujiy")
}

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_5pw7r")
dash_curve = SubResource("Curve_3phni")
metadata/_edit_horizontal_guides_ = [-45.0]

[node name="Label" type="Label" parent="."]
offset_left = -39.0
offset_top = -39.0
offset_right = -8.0
offset_bottom = -25.0
theme_override_font_sizes/font_size = 10
text = "debug"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2x2q1")
offset = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_l4nkx")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-1, -1)
emitting = false
amount = 1800
process_material = SubResource("ParticleProcessMaterial_lhdui")

[node name="jump_charge" type="TextureProgressBar" parent="."]
offset_left = 21.0
offset_top = -28.0
offset_right = 59.0
offset_bottom = 10.0
max_value = 150.0
fill_mode = 4
nine_patch_stretch = true
texture_progress = ExtResource("3_8ffhc")

[node name="jump_regen" type="TextureProgressBar" parent="."]
offset_left = -4.0
offset_top = -42.0
offset_right = 296.0
offset_bottom = 258.0
scale = Vector2(0.03, 0.03)
fill_mode = 4
texture_progress = ExtResource("3_8ffhc")

[node name="jump_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d0psv")
}

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
